# AI-Software-Development

./: .env.example  .gitignore  .pytest_output.txt  CHANGELOG.md  README.md  langgraph.json  main.py  pyproject.toml  pytest.ini  requirements.txt  restart.sh  run-local-with-ui.sh  stop.sh
scripts/: restart.sh  run-local-with-ui.sh  stop.sh
src/: __init__.py  callbacks.py  main.py  state.py
src/agents/: architecture_agent.py  tester_agent.py
src/ai_software_development/: __init__.py  memory.py  state.py
src/ai_software_development/agents/: __init__.py  backend_developer.py  base_agent.py  devops_agent.py  frontend_developer.py  requirements_analyst.py
src/ai_software_development/resources/: backend_developer.yaml  devops_agent.yaml  frontend_developer.yaml
src/ai_software_development/tools/: __init__.py
src/ai_software_development/utils/: config_loader.py
src/resources/: architecture_agent.yaml  requirements_analyst.yaml  supervisor.yaml  tester_agent.yaml
src/tools/: __init__.py  custom_tools.py
src/utils/: __init__.py  state.py
tests/: __init__.py  conftest.py  test_custom_tools.py  test_integration_workflows.py  test_langchain_best_practices.py  test_main.py  test_state.py
